[gd_scene load_steps=19 format=2]

[ext_resource path="res://addons/angelica/Joystick/Joystick.gd" type="Script" id=1]
[ext_resource path="res://addons/angelica/Joystick/Axis2D.gd" type="Script" id=2]
[ext_resource path="res://addons/angelica/Joystick/DiControl.gd" type="Script" id=3]
[ext_resource path="res://img/48/1f5a2.png" type="Texture" id=4]
[ext_resource path="res://addons/angelica/Joystick/Axis.gd" type="Script" id=5]
[ext_resource path="res://sprites/walking_up.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 172.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.117647, 0.117647, 0.117647, 0.270588 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.445312, 0.445312, 0.445312, 0.352941 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 126, 0, 63, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 189, 0, 63, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 252, 0, 63, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 315, 0, 63, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 378, 0, 63, 64 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": false,
"name": "tiro",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.964706, 0.964706, 0.964706, 0.45098 )
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="CircleShape2D" id=10]
radius = 4.0

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.729412, 0, 0, 0.603922 )
border_color = Color( 0.772549, 0.772549, 0.772549, 0.54902 )
border_blend = true
corner_radius_top_left = 62
corner_radius_top_right = 62
corner_radius_bottom_right = 62
corner_radius_bottom_left = 62

[sub_resource type="CircleShape2D" id=12]
radius = 90.0

[node name="LeftControl" type="Node2D"]
position = Vector2( 128.418, 389.132 )
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = -100.0
margin_top = -100.0
margin_right = 80.0
margin_bottom = 80.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="Node2D" parent="Axis"]
position = Vector2( 0.0984192, 0.193848 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Axis/AnimatedSprite"]
frames = SubResource( 8 )
animation = "walk"
playing = true
flip_h = true

[node name="MarginContainer" type="MarginContainer" parent="Axis"]
margin_left = -26.0
margin_top = -26.0
margin_right = 26.0
margin_bottom = 26.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis" type="Panel" parent="Axis/MarginContainer"]
modulate = Color( 0.639216, 0.639216, 0.639216, 1 )
margin_right = 52.0
margin_bottom = 52.0
mouse_filter = 2
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Joystick" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Area2D2" type="Area2D" parent="Joystick"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Joystick/Area2D2"]
shape = SubResource( 10 )

[node name="RichTextLabel" type="RichTextLabel" parent="Joystick"]
visible = false
modulate = Color( 1, 1, 1, 0.0117647 )
margin_left = -84.0
margin_top = -88.0
margin_right = 84.0
margin_bottom = 84.0
text = " ffdsfdsaasgdsagdgasdgsagdsag
dasg gdasggdsagadsg
dsafisah fihsfhsdf"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Joystick"]
light_mask = 0
margin_left = -56.0
margin_top = -56.0
margin_right = 56.0
margin_bottom = 56.0
mouse_filter = 2
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="Joystick"]
position = Vector2( -91.3283, -89.9976 )
shape = SubResource( 12 )

[node name="Label" type="Label" parent="."]
margin_left = -20.0
margin_top = -88.0
margin_right = 20.0
margin_bottom = -74.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="gui_input" from="Joystick/RichTextLabel" to="Joystick" method="_on_RichTextLabel_gui_input"]
[connection signal="pressed" from="Joystick/TouchScreenButton" to="Joystick" method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="Joystick/TouchScreenButton" to="Joystick" method="_on_TouchScreenButton_released"]
